src/test/ui/derived-errors/issue-31997-1.stderr
error[E0425]: cannot find function `new` in `HashMap`
  --> $DIR/issue-31997-1.rs:20:28
   |
LL |     let mut map = HashMap::new();
   |                            ^^^ not found in `HashMap`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
